--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.3.4",
-    "handlebars": "^4.7.7",
-    "sphp": "^0.6.3"
+    "handlebars": "^4.7.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
